syntax = "proto3";

package echo;

option go_package = "grpc-over-http3/proto";

service EchoService {
  rpc Echo (EchoRequest) returns (EchoResponse);
  rpc StreamEcho (stream EchoRequest) returns (stream EchoResponse);
}

message EchoRequest {
  string message = 1;
  int64 timestamp = 2;
}

message EchoResponse {
  string message = 1;
  int64 timestamp = 2;
  string protocol = 3;
}
